--- a/.github/ISSUE_TEMPLATE/c4gt_community.yml
+++ b/.github/ISSUE_TEMPLATE/c4gt_community.yml
@@ -81,6 +81,7 @@ body:
         - Tibil
         - ONDC
         - ONEST
+        - Impactyaan
     validations:
       required: true
 
@@ -124,6 +125,7 @@ body:
         - Express.js
         - Feature
         - Flask
+        - Frappe
         - Go
         - GraphQL
         - HTML
